# Triangles

./: CMakeLists.txt  README.md
include/: line.hpp  octotree.hpp  plane.hpp  point.hpp  tools.hpp  triangle.hpp  triangle_test.hpp
src/: main.cpp  tools.cpp  trg_gen.cpp  triangle_test.cpp
test/: CMakeLists.txt  triangle_test.hpp
